# factorsum

./: .gitignore  CITATION.bib  README.md  pyproject.toml  requirements.txt
evaluation/: baseline.py  budgets.py  evaluation.py  factorsum.py  generation.py  inference.py  utils.py
factorsum/: config.py  constraints.py  data.py  extrinsic.py  guidance.py  memoizer.py  metrics.py  model.py  oracle.py  redundancy.py  sampling.py  score.py  utils.py
scripts/: run_summarization.py
